# mfc

./: .gitignore  CMakeLists.txt
grammar/: simple_expression.l  simple_expression.yy
include/: aliases.hpp  field.hpp  fraction.hpp  loader_exodusII.hpp  loader_micromag.hpp  loader_tecplot.hpp  mesh.hpp  model.hpp  utilities.hpp  writer_micromag.hpp  writer_xdmf.hpp
python/: load_mmf.py  single.mmf  single.xdmf
src/: CMakeLists.txt  main.cpp
test-meshes/: single-zone-0001.tec
